[package]
name = "surf"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "surf"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
whirlpools = { version = "0.3.0", features = ["cpi"]}
drift = { git = "https://github.com/drift-labs/protocol-v2", tag = "v2.11.0", package = "drift", features = ["cpi"] }
anchor-spl = "0.25.0"
